# camera-trap

./: pyproject.toml
camera_trap/: app.py  config.yaml  profiler.py
tests/: test_camera_trap.py
